Skills close button issue z-index solved

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,7 +45,7 @@ body {
         background: #009688;
         width: 60px;
         right: 0;
-        z-index: 1;
+        z-index: 2;
         transition-duration: 0.35s;
         margin-right: 10px;
         margin-top: 10px;
@@ -151,6 +151,7 @@ body {
         height: 100vh;
         position: absolute;
         background-color: #fafafa;
+        z-index: 1;
 
         .title {
             position: absolute;
@@ -388,7 +389,10 @@ body {
             max-width: 60em;
             line-height: 2;
         }
+    }
 
+    .experience1-section,
+    .skills-section {
         .about-me {
             max-width: 300px;
             height: 600px;
@@ -399,6 +403,7 @@ body {
             bottom: 0;
             font-family: 'Abril Fatface';
             margin-bottom: -100px;
+            z-index: 1;
         }
     }
 
@@ -474,42 +479,54 @@ body {
             font-size: 40px;
             font-family: 'Abril Fatface';
             background-color: $pink-dark;
+        }
 
-            #close-slide {
-                opacity: 0;
-                width: 30px;
-                height: 30px;
-                position: inherit;
-                right: 0;
-                top: 0;
-                bottom: 0;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                z-index: 12;
+        #close-slide {
+            opacity: 0;
+            width: 30px;
+            height: 30px;
+            position: inherit;
+            right: 0;
+            bottom: 30vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 12;
 
-                &:hover {
-                    cursor: pointer;
-                }
-
-                .left,
-                .right {
-                    height: 1px;
-                    width: 100%;
-                    display: block;
-                    background: white;
-                    border-radius: 3px;
-                }
-
-                .left {
-                    transform: rotate(45deg);
-                }
-
-                .right {
-                    transform: rotate(-45deg);
-                }
+            &:hover {
+                cursor: pointer;
             }
+
+            .left,
+            .right {
+                height: 1px;
+                width: 100%;
+                display: block;
+                background: white;
+                border-radius: 3px;
+            }
+
+            .left {
+                transform: rotate(45deg);
+            }
+
+            .right {
+                transform: rotate(-45deg);
+            }
+        }
+
+        .welcome-section-top,
+        .welcome-section-back {
+            z-index: 3;
+        }
+
+        .skill-box {
+            z-index: 1;
+        }
+
+        .about-me {
+            z-index: 2
         }
     }
 }
